<resources>
    <string name="app_name">DHidraulic</string>

    <string name="num_pavimentos">Sua edificação terá quantos pavimentos?</string>
    <string name="num_pessoas">Quantas pessoas habitaram sua edificação?</string>
    <string name="num_banheiros">Quantos banheiros haverão em sua edificação?</string>
    <string name="num_cozinhas">Quantas cozinhas haverão em sua edificação?</string>
    <string name="num_area_servico">Quantas áreas de serviço haverão em sua edificação?</string>

    <string name="banheiro_acima">Os banheiros serão um acima do outro?</string>
    <string name="equipamentos_banheiro">“Para os banheiros: Quais e quantos equipamentos hidráulicos haverão?</string>

    <string name="cozinha_acima">As cozinhas serão uma acima do outra?</string>
    <string name="equipamentos_cozinha">“Para a cozinha 1: Quais e quantos equipamentos hidráulicos haverão?</string>

    <string name="area_acima">As áreas de serviço serão uma acima do outra ?</string>
    <string name="equipamentos_area">Para área de serviço 1: Quais e quantos equipamentos hidráulicos haverão?</string>

    <string name="btn_ctn">Continuar</string>

    <string name="title_activity_menu">Menu</string>

    <string name="cozinha">Cozinha</string>

    <string name="banheiro">Banheiro</string>
    <string name="prvValvula">A privada é de válvula ?</string>
    <string name="aviso_banheiros_corretos">Tem certeza que já configurou todos os banheiros corretamente ?</string>
    <string name="aviso_banheiro_atualizado">Esse banheiro foi atualizado!</string>
    <string name="aviso_banheiro_salvo">Banheiro salvo com sucesso.</string>
    <string name="area_servico">Área de serviço</string>
    <string name="aviso_campo_negativo">O valor não pode ser negativo</string>
</resources>
