<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnAreaServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:drawableBottom="@drawable/area"
            android:text="@string/area_servico"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnBanheiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:drawableBottom="@drawable/banheiro"
            android:text="@string/banheiro"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnCozinha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:drawableBottom="@drawable/cozinha"
            android:text="@string/cozinha"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</ScrollView>