<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8DFB7"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txlNumPav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="16dp">
                <EditText
                    android:id="@+id/edtNumPavimentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:bufferType="editable"
                    android:hint="@string/num_pavimentos"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txilNumPessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="@id/txlNumPav"
                tools:ignore="MissingConstraints">
                <EditText
                    android:id="@+id/edtNumPessoas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/num_pessoas"
                    android:inputType="number"
                    android:text="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txilNumCozinha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="@id/txilNumPessoas"
                tools:ignore="MissingConstraints">
                <EditText
                    android:id="@+id/edtNumCozinha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/num_cozinhas"
                    android:inputType="number"
                    android:text="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txilNumBanheiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="@id/txilNumCozinha"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/edtNumBanheiro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/num_banheiros"
                    android:inputType="number"
                    android:text="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txilAreaServico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="@id/txilNumBanheiro"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/edtNumAreaDeServico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/num_area_servico"
                    android:inputType="number"
                    android:text="3" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="bottom"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="127dp">

            <Button
                android:id="@+id/btnCtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btn_ctn"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>